Simplify MoveList API